# SuperSDG

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Trunk.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/shaders/: texture.wgsl
src/: demo.rs  main.rs  maze.rs  maze_render.rs  menu.rs
src/core/: menu.rs  mod.rs
src/maze/: camera.rs  fps_overlay.rs  help_overlay.rs  level.rs  light.rs  mini_map.rs  mod.rs  player.rs  render.rs
src/tools/: debug.rs  fps.rs  fps_overlay.rs  mod.rs
web/: index.html  restart-audio-context.js
