[package]
name = "super_sdg"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }
rand = { version = "0.9" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"], optional = false }


[features]
# Keep dev tooling out of release by default
default = []

dev = [
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
]

dev_native = [
  "dev",
  "bevy/file_watcher",
  "bevy/embedded_watcher",
]

# Development profile tuned for fast incremental builds
[profile.dev]
opt-level = 0
incremental = true
codegen-units = 32

# Slightly optimize dependencies for runtime smoothness in dev
[profile.dev.package."*"]
opt-level = 2

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "debuginfo"
panic = "abort"

# Override some settings for native builds.
[profile.release-native]
inherits = "release"
opt-level = 3
lto = "thin"
strip = "symbols"
panic = "abort"
