[package]
name = "super_sdg"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["dynamic_linking"] }
rand = { version = "0.10", features = [] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"], optional = false }
getrandom04 = { version = "0.4", features = ["wasm_js"], optional = false, package = "getrandom" }

[features]
# Keep dev tooling out of release by default
default = []

dev = [
  "bevy/bevy_dev_tools",
  "bevy/dynamic_linking",
]

dev_native = [
  "bevy/embedded_watcher",
  "bevy/file_watcher",
  "dev",
]

# Development profile tuned for fast incremental builds
[profile.dev]
opt-level = 0
incremental = true
codegen-units = 32

# Slightly optimize dependencies for runtime smoothness in dev
[profile.dev.package."*"]
opt-level = 2

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
opt-level = "s"
strip = "debuginfo"
lto = "thin"
panic = "abort"
codegen-units = 1

# Override some settings for native builds.
[profile.release-native]
inherits = "release"
opt-level = 3
strip = "symbols"
lto = "thin"
panic = "abort"
